# rokind

./: .env.example  .gitignore  README.md  ao.yml  ao_workflow.py  index.html  package.json  pnpm-lock.yaml  vite.config.ts  デバッグ用ダミー予定モードの追加.md
.github/workflows/: release.yml
src/: main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
