[package]
name = "rokind-reminder"
version = "0.1.0"
description = "Google Calendar reminder desktop app built with Tauri v2"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
dotenvy = "0.15.7"
tauri-build = { version = "2.0.2" }

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["clock", "serde"] }
dirs = "6.0.0"
once_cell = "1.21.3"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tauri = { version = "2.4.1", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-opener = "2.2.6"
tokio = { version = "1.45.1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
url = "2.5.4"
